--- a/anuncio.html
+++ b/anuncio.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -212,6 +213,7 @@
             padding: 10px;
             background-color: #f4f4f4;
             border-top: 1px solid #ddd;
+            box-sizing: border-box;
         }
 
         .navigation-buttons button {
@@ -221,6 +223,18 @@
             border: none;
             cursor: pointer;
             border-radius: 5px;
+        }
+
+        @media (max-width: 600px) {
+            .navigation-buttons {
+                flex-direction: column;
+                align-items: stretch;
+                padding: 5px;
+            }
+
+            .navigation-buttons button {
+                margin: 5px 0;
+            }
         }
     </style>
     <meta name="description" content="Aprenda a criar uma rede social do zero com este guia prático para iniciantes">
