--- a/quest.html
+++ b/quest.html
@@ -24,7 +24,11 @@
     }
 
     body {
+      margin: 0;
       background: linear-gradient(135deg, #ff69b4 0%, #ffe6f2 100%);
+      background-image: url('https://i.pinimg.com/originals/4e/fe/6c/4efe6c264f8e9e6572710d225f4f53ce.gif');
+      background-size: cover;
+      background-position: center;
       font-family: 'Arial', sans-serif;
       line-height: 1.6;
       display: flex;
@@ -35,7 +39,6 @@
       transition: background 0.5s ease;
       perspective: 1000px;
     }
-
     .container {
       width: 100%;
       max-width: 600px;
