--- a/provador.html
+++ b/provador.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-
 <html lang="pt-BR">
 
 <head>
   <meta charset="UTF-8">
   <title>Provador Virtual</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
     /* CSS Reset */
     html,
@@ -156,6 +156,7 @@
       font-size: 2em;
       margin-bottom: 20px;
       color: #e67e22;
+      text-align: center;
     }
 
     #main-container {
@@ -164,14 +165,15 @@
       max-width: 1200px;
       margin: 0 auto;
       border: 5px solid #e67e22;
-      flex-direction: row;
+      flex-direction: column;
+      /* Alterado para column */
     }
 
     #mannequin-area {
-      flex: 2;
       position: relative;
       padding: 20px;
-      width: 75%;
+      width: 100%;
+      /* Ocupa a largura total */
       padding: 10px;
     }
 
@@ -226,11 +228,11 @@
 
 
     #control-panel {
-      flex: 1;
       padding: 20px;
       text-align: center;
       background-color: #fff;
-      width: 25%;
+      width: 100%;
+      /* Ocupa a largura total */
       padding: 10px;
     }
 
@@ -286,6 +288,24 @@
       margin-right: 5px;
       vertical-align: middle;
       /* Alinha verticalmente com o texto */
+    }
+
+    /* Media query para telas menores */
+    @media (min-width: 768px) {
+      #main-container {
+        flex-direction: row;
+        /* Restaura para row em telas maiores */
+      }
+
+      #mannequin-area {
+        flex: 2;
+        width: 75%;
+      }
+
+      #control-panel {
+        flex: 1;
+        width: 25%;
+      }
     }
   </style>
 </head>
