--- a/provador.html
+++ b/provador.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Provador Virtual</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <style>
     /* CSS Reset */
     html,
@@ -143,6 +143,8 @@
       margin: 0;
       padding: 0;
       background-color: #f0f0f0;
+      overflow: hidden;
+      height: 100vh;
     }
 
     #app-container {
@@ -150,6 +152,7 @@
       flex-direction: column;
       align-items: center;
       padding: 20px;
+      height: 100%;
     }
 
     #header {
@@ -161,8 +164,9 @@
 
     #main-container {
       display: flex;
-      width: 90%;
-      max-width: 1200px;
+      width: 100%;
+      height: calc(100% - 80px);
+      max-width: none;
       margin: 0 auto;
       border: 5px solid #e67e22;
       flex-direction: column;
@@ -175,12 +179,14 @@
       width: 100%;
       /* Ocupa a largura total */
       padding: 10px;
+      flex: 2;
+      /* Distribui o espaço vertical */
     }
 
     #mannequin-container {
       position: relative;
       width: 100%;
-      max-width: 360px;
+      max-width: none;
       aspect-ratio: 1080 / 1920;
       margin: 0 auto;
       background-color: #f2f2f2;
@@ -234,6 +240,10 @@
       width: 100%;
       /* Ocupa a largura total */
       padding: 10px;
+      flex: 1;
+      /* Distribui o espaço vertical */
+      overflow-y: auto;
+      /* Adiciona barra de rolagem vertical se necessário */
     }
 
     #control-panel h2 {
